<resources>
    <string name="app_name">AudioCutter</string>
    <string name="successfully">Set Successfully</string>
    <string name="main_screen_title">MP3 Cutter &amp; <br /> Ringtone Maker</string>
    <string name="main_screen_mp3_cutter_text">MP3 Cutter</string>
    <string name="main_screen_audio_merger_text">Audio Merger</string>
    <string name="main_screen_audio_mixer_text">Audio Mixer</string>
    <string name="main_screen_contacts_text">Contacts</string>
    <string name="main_screen_my_studio_text">My Studio</string>
    <string name="main_screen_flash_call_text">Flash Call</string>
    <string name="ToastExceed">You can select only 2 item</string>
    <string name="file_merged">file to be merged</string>
    <string name="Choose_in_app_inten">"Choose a sharing app"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_as">Set As</string>
    <string name="cut">Cut</string>
    <string name="contacs">Contacts</string>
    <string name="open_with">Open With</string>
    <string name="share">Share</string>
    <string name="rename">Rename</string>
    <string name="dialog_advance_ok">OK</string>
    <string name="info">Info</string>
    <string name="delete">Delete</string>
    <string name="my_studio_dialog_info">Info</string>
    <string name="my_studio_dialog_ok">OK</string>
    <string name="my_studio_dialog_genre">Genre</string>
    <string name="my_studio_dialog_album">Album</string>
    <string name="my_studio_dialog_artist">Artist</string>
    <string name="my_studio_dialog_title">Title</string>
    <string name="my_studio_dialog_frequency">Frequency</string>
    <string name="my_studio_dialog_channel">Channel</string>
    <string name="my_studio_dialog_bitrate">Bitrate</string>
    <string name="my_studio_dialog_length">Duration</string>
    <string name="my_studio_dialog_format">Format</string>
    <string name="my_studio_dialog_date">Date</string>
    <string name="my_studio_dialog_size">Size</string>
    <string name="my_studio_dialog_location">Location</string>
    <string name="my_studio_dialog_file">Filename</string>
    <string name="my_studio_title">My Studio</string>
    <string name="my_studio_dialog_delete_title">Delete file from device?</string>
    <string name="my_studio_dialog_delete_content">File will be deleted permanently.</string>
    <string name="my_studio_dialog_btn_yes">YES</string>
    <string name="my_studio_dialog_btn_delete">DELETE</string>
    <string name="my_studio_dialog_rename_title">Rename</string>
    <string name="my_studio_dialog_rename_file_name">File Name</string>
    <string name="my_studio_dialog_btn_rename">RENAME</string>
    <string name="my_studio_dialog_set_as_title">Set As</string>
    <string name="my_studio_dialog_set_as_ringtone">Ringtone</string>
    <string name="my_studio_dialog_set_as_alarm">Alarm</string>
    <string name="my_studio_dialog_set_as_notification">Notification</string>
    <string name="my_studio_fragment_select_all">SELECT ALL</string>
    <string name="AUDIO_CUTTER">Audio Cutter</string>
    <string name="AUDIO_MERGER">Audio Merger</string>
    <string name="AUDIO_MIXER">Audio Mixer</string>
    <string name="my_studio_notification_chose_item_delete">Please choose at least one item !</string>
    <string name="my_studio_notification_chose_item_share">Please choose at least one item !</string>
    <string name="my_studio_delete_fail">Delete Fail !</string>
    <string name="list_contact_select_btn_save">Save</string>
    <string name="list_contact_select_bottom_title">Select File</string>
    <string name="list_contact_select_title">Select Ringtone</string>
    <string name="list_contact_notification_no_contact">No Contacts</string>
    <string name="list_contact_notification_no_result">No Result</string>
    <string name="list_contact_title">Contacts</string>
    <string name="list_contact_item_default">Default</string>
    <string name="countFile">0 file</string>
    <string name="dialog_advanced_title">Advanced</string>
    <string name="dialog_advanced_fade_in">Fade in</string>
    <string name="dialog_advanced_fade_out">Fade out</string>
    <string name="dialog_convert_title">Convert</string>
    <string name="dialog_convert_file_name">File Name</string>
    <string name="dialog_convert_format">Format</string>
    <string name="dialog_convert_bitrate">Bitrate</string>
    <string name="dialog_convert_volume">Volume</string>
    <string name="dialog_convert_ok">CONVERT</string>
    <string name="storage_guide_permission_step_1">Step 1 : "Clicked Permissions"</string>
    <string name="storage_guide_permission_step_2">Step 2 : "Turn On Storage"</string>
    <string name="contact_guide_permission_step_1">Step 1 : "Clicked Permissions"</string>
    <string name="contact_guide_permission_step_2">Step 2 : "Turn On Contact"</string>
    <string name="enable_write_setting_organizer_by_granting_access_to_audio_cutter">Enable write settings organizer by granting access to Audio Cutter.</string>
    <string name="storage_permission_to_convert_files_please_allow_mp3_cutter_to_access_files_on_your_device">To convert files, please allow MP3 Cutter to access files on your device.</string>
    <string name="storage_permission_allow">ALLOW</string>
    <string name="contact_permission_to_set_ringtone_we_need_the_permission_to_access_your_contacts">To set ringtone, we need the permission to access your contacts.</string>
    <string name="audio_mixer_name_actionbar">Audio Mixer</string>
    <string name="search_hint_text">Search...</string>
    <string name="next_mix_screen">Next</string>
    <string name="_2_1_mb_default">2.1 MB</string>
    <string name="_128kb_s_default">128kb/s</string>
    <string name="shorted_audio_mixing">SHORTEST AUDIO</string>
    <string name="longgest_audio_mixing">LONGEST AUDIO</string>
    <string name="audio_cutter_name_actionbar">Audio Cutter</string>
    <string name="no_result_empty">No result.</string>
    <string name="audio_merge_name_actionbar">Audio Merge</string>
    <string name="my_studio_no_finished_task">No finished task</string>
    <string name="result_screen_title_loading">Converting...</string>
    <string name="result_screen_title_result">Audio Saved</string>
    <string name="result_screen_size_default">128kb/s</string>
    <string name="result_scren_wait_task">Please wait until other task finished...</string>
    <string name="result_screen_timelife_default">00:00</string>
    <string name="result_screen_timetotal_default">/00:00</string>
    <string name="result_screen_title_ringtone">Ringtone</string>
    <string name="result_screen_title_alarm">Alarm</string>
    <string name="result_screen_title_notification">Notification</string>
    <string name="result_screen_title_share">Share</string>
    <string name="result_screen_title_contacts">Contacts</string>
    <string name="result_screen_title_open_with">Open With</string>
    <string name="result_screen_btn_background_convert">BACKGROUND CONVERT</string>
    <string name="cancel_dialog_title">Warning</string>
    <string name="cancel_dialog_notification">Do you want to cancel the conversion?</string>
    <string name="please_wait_a_moment">Please wait a moment.....</string>
    <string name="set_successfully">Set Successfully</string>
    <string name="setting_text">Settings</string>
    <string name="remove_ads_string">Remove ads and unlock all features.</string>
    <string name="premium_settingscreen">Premium</string>
    <string name="language_settingscreen">Language</string>
    <string name="feedback_settingscreen">Feedback</string>
    <string name="report_bugs_settingscreen">Report bugs and tell us what to improve</string>
    <string name="join_facebook_group_settingscreen">Join Facebook Group</string>
    <string name="meet_mp3_cutter_settingscreen"><![CDATA[Meet MP3 Cutter & Ringtone Maker with your friends]]></string>
    <string name="share_settingscreen">Share</string>
    <string name="share_mp3_cutting_settingscreen"><![CDATA[Share MP3 Cutter & Ringtone Maker with your friends]]></string>
    <string name="about_settingscreen">About</string>
    <string name="privacy_policy_settingscreen">Privacy policy</string>
    <string name="version_settingscreen">Version</string>
    <string name="common_cancel">CANCEL</string>
    <string name="tv_ok_settings">OK</string>
    <string name="tv_cancel_settings">CANCEL</string>
    <string name="result_sercice_loading_complete">Converting complete</string>
    <string name="result_service_loading_fail">Converting Fail</string>
    <string name="result_service_loading_complete">Converting complete</string>
    <string name="result_service_content_title">Audio Cutter Converting</string>
    <string name="result_screen_set_ringtone_successful">Set Ringtone Successfully !</string>
    <string name="result_screen_set_ringtone_fail">Set Ringtone Fail !</string>
    <string name="result_screen_set_alarm_successful">Set Alarm Successfully !</string>
    <string name="result_screen_set_alarm_fail">Set Alarm Fail !</string>
    <string name="result_screen_set_notification_successful">Set Notification Successfully !</string>
    <string name="result_screen_set_notification_fail">Set Notification Fail !</string>
    <string name="set_contact_ringtone_screen_set_ringtone_successfull">Set RingTone Successfully !</string>
    <string name="set_contact_ringtone_screen_set_ringtone_fail">Set RingTone Fail !</string>
    <string name="list_select_audio_screen_open_file_title">\"Select a File \"</string>
    <string name="contact_managerimpl_default_ringtone">Default ringtone</string>
    <string name="filename_exist">The file name already exists</string>
    <string name="name_mustbenull">Name is not empty</string>
    <string name="vietnam_text">Tiếng việt</string>
    <string name="english_text">English</string>
    <string name="kbps">Kb/s</string>
    <string name="kbps_result">/s</string>
    <string name="megabyte">Mb</string>
    <string name="kilobyte">Kb</string>
    <string name="filecount">File</string>
    <string name="audio_merged">Audio Merged</string>
    <string name="_2_file_to_be_merged">2 file to be merged</string>
    <string name="merger">MERGER</string>
    <string name="mix">MIX</string>
    <string name="file_name">File name</string>
    <string name="set">SET</string>
    <string name="english">English</string>
    <string name="search">Search...</string>
    <string name="audio_file_is_not_found">Audio file is not found</string>
    <string name="my_studio_delete_successfull">Delete Successful</string>
    <string name="audio_name_is_not_empty">Name is not empty</string>
    <string name="audio_name_this_name_is_already_existed">This name is already existed</string>
    <string name="my_studio_rename_audio_file_successfull">Rename audio successfully</string>
    <string name="my_studio_rename_audio_file_fail">Rename audio failed</string>
    <string name="access_helper_service_label">Audio Cutter</string>
    <string name="audio_flash_call_name_actionbar">Flash Call</string>
    <string name="flashing_type">Flashing Type</string>
    <string name="continuity_name">Continuity</string>
    <string name="beat_name_flash_call">Beat</string>
    <string name="my_studio_dialog_delete_cancel">CANCEL</string>
    <string name="audio_cutter_screen_dialog_convert_cancel">CANCEL</string>
    <string name="my_studio_dialog_set_as_contact">Contacts</string>
</resources>