<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_item_dialog"
            android:fontFamily="@font/opensans_bold"
            android:gravity="center"
            android:text="@string/dialog_convert_title"
            android:textColor="@color/dialog_advanced_title_color"
            android:textSize="@dimen/d_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_item"
            android:layout_marginTop="@dimen/margin_item"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center"
            android:text="@string/dialog_convert_file_name"
            android:textColor="@color/dialog_advanced_title_fade_color"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/name_edt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="@dimen/margin_item"
            android:background="@drawable/bg_edt_ctm"
            android:fontFamily="@font/opensans_regular"
            android:hint="@string/file_name"
            android:singleLine="true"
            android:textColor="@color/dialog_advanced_text_sniper_color"
            android:textSize="@dimen/text_size_edt"
            android:theme="@style/editTextTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_item"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="center"
                    android:text="@string/dialog_convert_format"
                    android:textColor="@color/dialog_advanced_title_fade_color"
                    android:textSize="12dp" />

                <com.example.audiocutter.ui.editor.cutting.spinner.MaterialSpinner
                    android:id="@+id/spinner_format"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/d_48"
                    android:layout_marginLeft="@dimen/margin_item"
                    android:layout_marginTop="@dimen/d_12"
                    android:layout_marginRight="@dimen/margin_item" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_item"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="center"
                    android:text="@string/dialog_convert_bitrate"
                    android:textColor="@color/dialog_advanced_title_fade_color"
                    android:textSize="12dp" />

                <com.example.audiocutter.ui.editor.cutting.spinner.MaterialSpinner
                    android:id="@+id/spinner_bitrate"

                    android:layout_width="match_parent"
                    android:layout_height="@dimen/d_48"
                    android:layout_marginLeft="@dimen/margin_item"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="@dimen/margin_item" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_item"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:text="@string/dialog_convert_volume"
                android:textColor="@color/dialog_advanced_title_fade_color"
                android:textSize="12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.slider.Slider
                    android:id="@+id/seekbar"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/d_48"
                    android:layout_marginLeft="15dp"
                    android:layout_toLeftOf="@id/percent_tv"
                    android:layout_weight="1"
                    android:theme="@style/themeSeekbar"
                    android:valueFrom="0"
                    android:valueTo="300"
                    app:labelBehavior="gone"
                    app:thumbColor="@color/dialog_convert_seekbar_color"
                    app:thumbRadius="8dp"
                    app:trackHeight="5dp" />

                <TextView
                    android:id="@+id/percent_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/margin_item"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="right"
                    android:text="100%"
                    android:textColor="@color/dialog_advanced_title_fade_color"
                    android:textSize="12dp" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_48"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/dialog_convert_cancel_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:text="@string/audio_cutter_screen_dialog_convert_cancel"
                android:textColor="@color/dialog_advanced_cancel_color"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/dialog_convert_ok_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:text="@string/dialog_convert_ok"
                android:textColor="@color/dialog_advanced_ok_color"
                android:textSize="14dp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
