<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66000000">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d_24"
        android:layout_marginLeft="@dimen/d_24"
        android:layout_marginEnd="@dimen/d_24"
        android:layout_marginRight="@dimen/d_24"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/d_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:paddingTop="@dimen/common_padding_top_dialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_bold"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/d_16"
                    android:text="@string/flashing_type"
                    android:textColor="#2E3041"
                    android:textSize="@dimen/text_size_header"
                    android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rg_set_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_item_dialog"
                android:paddingHorizontal="@dimen/d_16">

                <RadioButton
                    android:id="@+id/rb_continuity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:buttonTint="#FDAA74"
                    android:checked="true"
                    android:fontFamily="@font/opensans_regular"
                    android:paddingVertical="@dimen/margin_item_dialog"
                    android:shadowColor="#FDAA74"
                    android:text="@string/continuity_name"
                    android:textSize="@dimen/text_size_edt" />

                <RadioButton
                    android:id="@+id/rb_beat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:buttonTint="#FDAA74"
                    android:fontFamily="@font/opensans_regular"
                    android:paddingVertical="@dimen/d_16"
                    android:text="@string/beat_name_flash_call"
                    android:textSize="@dimen/text_size_edt" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_48"
                android:layout_marginTop="@dimen/margin_item_dialog">

                <TextView
                    android:id="@+id/tv_cancel_dialog_flash_type"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="center"
                    android:text="@string/tv_cancel_settings"
                    android:textColor="#BDBDBD"
                    android:textSize="@dimen/text_size_button"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_ok_dialog_flash_type"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="center"
                    android:text="@string/tv_ok_settings"
                    android:textColor="#FDAA74"
                    android:textSize="@dimen/text_size_button" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>