<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66000000">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding_left_right_dialog"
        android:layout_marginLeft="@dimen/common_padding_left_right_dialog"
        android:layout_marginEnd="@dimen/common_padding_left_right_dialog"
        android:layout_marginRight="@dimen/common_padding_left_right_dialog"
        android:orientation="vertical"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible"
                tools:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_item_dialog"
                    android:paddingHorizontal="@dimen/margin_item_dialog"
                    android:fontFamily="@font/opensans_bold"
                    android:gravity="center"
                    android:text="@string/my_studio_dialog_set_as_title"
                    android:textColor="#2E3041"
                    android:textSize="@dimen/text_size_header"
                    android:textStyle="bold" />
            </LinearLayout>


            <RadioGroup
                android:layout_marginTop="@dimen/margin_item_dialog"
                android:id="@+id/rg_setas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/margin_item_dialog">

                <RadioButton
                    android:background="?attr/selectableItemBackground"
                    android:layout_marginBottom="@dimen/margin_item_dialog"
                    android:id="@+id/rb_ringtone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#FDAA74"
                    android:fontFamily="@font/opensans_regular"
                    android:shadowColor="#FDAA74"
                    android:text="@string/my_studio_dialog_set_as_ringtone"
                    android:textSize="@dimen/text_size_edt" />

                <RadioButton
                    android:background="?attr/selectableItemBackground"
                    android:layout_marginBottom="@dimen/margin_item_dialog"
                    android:id="@+id/rb_alarm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#FDAA74"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/my_studio_dialog_set_as_alarm"
                    android:textSize="@dimen/text_size_edt" />
                <RadioButton
                    android:background="?attr/selectableItemBackground"
                    android:layout_marginBottom="@dimen/margin_item_dialog"
                    android:id="@+id/rb_notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#FDAA74"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/my_studio_dialog_set_as_notification"
                    android:textSize="@dimen/text_size_edt" />

                <RadioButton
                    android:background="?attr/selectableItemBackground"
                    android:id="@+id/rb_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#FDAA74"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/my_studio_dialog_set_as_contact"
                    android:textSize="@dimen/text_size_edt" />
            </RadioGroup>

            <LinearLayout
                android:layout_height="@dimen/size_item_dialog"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_item_dialog">

                <TextView
                    android:id="@+id/tv_cancel_dialog_set_as"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="center"
                    android:text="CANCEL"
                    android:textColor="#BDBDBD"
                    android:textSize="@dimen/text_size_button"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_set_dialog_set_as"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="center"
                    android:text="@string/set"
                    android:textColor="#FDAA74"
                    android:textSize="@dimen/text_size_button" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>