<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66000000">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding_left_right_dialog"
        android:layout_marginLeft="@dimen/common_padding_left_right_dialog"
        android:layout_marginEnd="@dimen/common_padding_left_right_dialog"
        android:layout_marginRight="@dimen/common_padding_left_right_dialog"
        android:orientation="vertical"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/common_padding_top_dialog">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_item_dialog"
                android:fontFamily="@font/opensans_bold"
                android:gravity="center"
                android:text="@string/my_studio_dialog_delete_title"
                android:textColor="#2E3041"
                android:textSize="@dimen/text_size_header"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_item_dialog"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:paddingHorizontal="@dimen/margin_item_dialog"
                android:text="@string/my_studio_dialog_delete_content"
                android:textColor="#2E3041"
                android:textSize="@dimen/text_size_button" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_item_dialog">

                <TextView
                    android:id="@+id/tv_cancel_dialog_delete"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="center"
                    android:text="@string/my_studio_dialog_delete_cancel"
                    android:textColor="#BDBDBD"
                    android:textSize="@dimen/text_size_button"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_rename_dialog_delete"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="center"
                    android:text="@string/my_studio_dialog_btn_delete"
                    android:textColor="#FDAA74"
                    android:textSize="@dimen/text_size_button" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>